# agent_practices

./: .gitignore  pyproject.toml
helloworld/: Dockerfile  __main__.py  agent_executor.py  readme.md
langgraph/: Dockerfile  README.md  pyproject.toml
langgraph/app/: __main__.py  agent_executor.py  configs.py
langgraph/app/agent/: __init__.py  models.py  prompts.py  tools.py
multiple_agents/: README.md  configs.py  pyproject.toml
multiple_agents/airbnb_agent/: __main__.py  agent.py  agent_executor.py  test_agent.py
multiple_agents/host_agent/: __main__.py  remote_agent_connection.py  routing_agent.py  test.py
multiple_agents/weather_agent/: __main__.py  agent.py  agent_executor.py  test_agent.py
try_ag2/: __main__.py  agent.py  agent_executor.py  pyproject.toml  test_client.py
