[project]
name = "mcp-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.2.12",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
]

[dependency-groups]
dev = [
    "a2a-sdk>=0.2.11",
    "langchain-mcp-adapters>=0.1.9",
    "rich>=14.0.0",
]
