[project]
name = "try-ag2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.1",
    "autogen>=0.9",
    "click>=8.2.1",
    "google-api-python-client",
    "grpcio>=1.73.1",
    "grpcio-tools>=1.73.1",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "mcp>=1.12.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
